--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@mdi/font": "^5.3.45",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
     "locomotive-scroll": "^3.5.4",
     "material-design-icons": "^3.0.1",
